[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Art/Sprites/Enemies/l0_sprite_1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemies/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Assets/Art/Fonts/PriceDownFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/Common/Health.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Common/Movement.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Enemies/Behaviours/EnemyBehaviourMoveAtPlayer.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Enemies/Behaviours/EnemyRest.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Enemies/Behaviours/EnemyShootBehaviour.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Enemies/Behaviours/EnemyBehaviourMoveAtMiddle.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Enemies/Behaviours/EnemyBehaviourTeleport.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Enemies/Behaviours/EnemyBehaviourLookAtPlayer.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Particles/DizzyEffect.tscn" type="PackedScene" id=12]
[ext_resource path="res://Sounds/Explosion12.wav" type="AudioStream" id=13]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 64, 64 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0, 0, 1 )

[node name="Enemy" type="KinematicBody2D" groups=[
"Enemy",
]]
scale = Vector2( 0.5, 0.5 )
collision_layer = 4
collision_mask = 2
script = ExtResource( 2 )
hitMaterial = SubResource( 1 )
prizes = 2

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 63.6364, 64.3357 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
flip_v = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 64, 64 )
shape = SubResource( 2 )

[node name="UI" type="Control" parent="."]
margin_right = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="UI"]
anchor_right = 3.2
anchor_bottom = 0.5
margin_top = -32.0
margin_right = -281.6
custom_styles/fg = SubResource( 3 )
value = 50.0
rounded = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthText" type="Label" parent="UI"]
margin_top = -32.0
margin_right = 128.0
custom_fonts/font = ExtResource( 3 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DamageTextSpawn" type="Node2D" parent="."]
position = Vector2( 64, 64 )

[node name="BulletSpawnPosition" type="Node2D" parent="."]
position = Vector2( 64, 64 )

[node name="Health" type="Node" parent="."]
script = ExtResource( 4 )
maxHealth = 7

[node name="FlinchTimer" type="Timer" parent="."]
wait_time = 0.01
one_shot = true

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 0.001
one_shot = true

[node name="MoveComponent" type="Node" parent="."]
script = ExtResource( 5 )
speed = 200.0

[node name="DizzyEffect" parent="." instance=ExtResource( 12 )]
position = Vector2( 64, -64 )

[node name="Behaviours" type="Node" parent="."]

[node name="Teleport" parent="Behaviours" instance=ExtResource( 10 )]

[node name="Teleport2" parent="Behaviours" instance=ExtResource( 10 )]

[node name="Teleport3" parent="Behaviours" instance=ExtResource( 10 )]

[node name="MoveAtMiddle" parent="Behaviours" instance=ExtResource( 9 )]

[node name="EnemyRest2" parent="Behaviours" instance=ExtResource( 7 )]

[node name="MoveAtPlayer" parent="Behaviours" instance=ExtResource( 6 )]
maxMoves = 5

[node name="LookAtPlayer" parent="Behaviours" instance=ExtResource( 11 )]

[node name="EnemyShootBehaviour" parent="Behaviours" instance=ExtResource( 8 )]

[node name="EnemyRest" parent="Behaviours" instance=ExtResource( 7 )]

[node name="ray" type="RayCast2D" parent="."]
position = Vector2( 64, 64 )
scale = Vector2( 0.8, 0.8 )
enabled = true
cast_to = Vector2( 0, 100 )

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
volume_db = -28.0
[connection signal="IsDeadEvent" from="Health" to="." method="_on_Health_IsDeadEvent"]
[connection signal="TakeDamageEvent" from="Health" to="." method="_on_Health_TakeDamageEvent"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_HurtTimer_timeout"]
